Name:               golfscript
Version:            0.0.1
Synopsis:           GolfScript, a terse programming language by Darren Smith.
Author:             Michael Tolly
Maintainer:         tolly@wisc.edu
Build-Type:         Simple
Cabal-version:      >= 1.8
Category:           Data
Data-Files:         test/golfscript.rb

Library
  Build-Depends:    base >= 4.6 && < 5
                    , array >= 0.4 && < 0.5
                    , hashmap >= 1.3 && < 1.4
                    , transformers >= 0.3 && < 0.4
                    , random >= 1.0 && < 1.1
                    , split >= 0.2 && < 0.3
  Exposed-modules:  Language.GolfScript.Base
                    Language.GolfScript.Scan
                    Language.GolfScript.Parse
                    Language.GolfScript.Prelude
  hs-source-dirs:   src
  ghc-options:      -Wall

Executable golfscript
  main-is:          golfscript.hs
  build-depends:    base >= 4.6 && < 5
                    , golfscript
  ghc-options:      -Wall

Test-Suite test-golfscript
  type:             exitcode-stdio-1.0
  main-is:          test.hs
  other-modules:    Paths_golfscript
  build-depends:    base >= 4.6 && < 5
                    , filepath >= 1.3 && < 1.4
                    , directory >= 1.2 && < 1.3
                    , process >= 1.1 && < 1.2
                    , HUnit >= 1.2 && < 1.3
                    , golfscript
  ghc-options:      -Wall
