Name:               golfscript
Version:            0.1
Synopsis:           GolfScript, a terse programming language by Darren Smith.
Author:             Michael Tolly
Maintainer:         onyxite@gmail.com
Build-Type:         Simple
Cabal-Version:      >= 1.8
Category:           Data
Data-Files:         test/golfscript.rb
License:            GPL
License-File:       LICENSE

Library
  Build-Depends:    base >= 4.6 && < 5
                    , array >= 0.4 && < 0.5
                    , hashmap >= 1.2 && < 1.4
                    , transformers >= 0.2 && < 0.4
                    , random >= 1.0 && < 1.1
                    , split >= 0.2 && < 0.3
  Exposed-Modules:  Language.GolfScript.Base
                    Language.GolfScript.Scan
                    Language.GolfScript.Parse
                    Language.GolfScript.Prelude
  Hs-Source-Dirs:   src
  Ghc-Options:      -Wall

Executable golfscript
  Main-Is:          golfscript.hs
  Build-Depends:    base >= 4.6 && < 5
                    , golfscript
  Ghc-Options:      -Wall

Test-Suite test-golfscript
  Type:             exitcode-stdio-1.0
  Main-Is:          test.hs
  Other-Modules:    Paths_golfscript
  Build-Depends:    base >= 4.6 && < 5
                    , filepath >= 1.3 && < 1.4
                    , directory >= 1.2 && < 1.3
                    , process >= 1.1 && < 1.2
                    , HUnit >= 1.2 && < 1.3
                    , golfscript
  Ghc-Options:      -Wall
