Name:               golfscript
Version:            0.1
Synopsis:           GolfScript, a terse programming language by Darren Smith.

Description:        GolfScript is a terse stack-based programming language
                    designed to win Code Golf competitions, solving problems
                    using the least amount of source code characters. The
                    language design and original interpreter in Ruby are by
                    Darren Smith. This is a ground-up reimplementation in
                    Haskell, aiming to support all features except for Ruby
                    string interpolation.

Author:             Michael Tolly
Maintainer:         onyxite@gmail.com
Build-Type:         Simple
Cabal-Version:      >= 1.8
Category:           Data
Data-Files:         test/golfscript.rb
License:            GPL
License-File:       LICENSE

Library
  Build-Depends:    base >= 4.6 && < 5
                    , array >= 0.4 && < 0.6
                    , hashmap >= 1.2 && < 1.4
                    , transformers >= 0.2 && < 0.4
                    , random >= 1.0 && < 1.1
                    , split >= 0.2 && < 0.3
  Exposed-Modules:  Language.GolfScript.Base
                    Language.GolfScript.Parse
                    Language.GolfScript.Prelude
  Other-Modules:    Language.GolfScript.Scan
  Hs-Source-Dirs:   src
  Ghc-Options:      -Wall

Executable golfscript
  Main-Is:          golfscript.hs
  Build-Depends:    base >= 4.6 && < 5
                    , golfscript
  Ghc-Options:      -Wall

Test-Suite test-golfscript
  Type:             exitcode-stdio-1.0
  Main-Is:          test.hs
  Other-Modules:    Paths_golfscript
  Build-Depends:    base >= 4.6 && < 5
                    , filepath >= 1.3 && < 1.4
                    , directory >= 1.2 && < 1.3
                    , process >= 1.1 && < 1.2
                    , HUnit >= 1.2 && < 1.3
                    , golfscript
  Ghc-Options:      -Wall

Source-Repository head
  Type:             git
  location:         git://github.com/mtolly/golfscript.git
